# sst-dumpi

./: .gitignore  LICENSE  Makefile.am  Makefile.common  README.md  bootstrap.sh  configure.ac  rsq.sh  todo
acinclude/: ax_mpiversion.m4  check_bg.m4  check_const.m4  check_cpp11.m4  check_enabled_features.m4  check_fortran.m4  check_instrumentation.m4  check_mpi_version.m4  check_mpiio.m4  check_otf2.m4  check_papi.m4  check_posix_timers.m4  check_pthreads.m4  check_sdk.m4  clean_config  clean_constants  clean_ops  clean_types  config_buffers.m4  mpiconfigs.m4  mpiconstants.m4  mpio.m4  mpiops.m4  mpitypes.m4  oldmpiconfigs.m4  oldmpiconstants.m4  oldmpiops.m4  oldmpitypes.m4  sanity_check_mpicc.m4
data/: combiner.pl  constants.pl  datatypes.pl  dumpi.conf  mpifuncs.h  ops.pl
docs/: compiling.dox  design-notes.txt  doxygen.cfg.in  dumpi.dox  issues.dox  oaq.dox  tools.dox  traceformat.dox  user.dox
dumpi/: Makefile.am  dumpiconfig.h
dumpi/common/: Makefile.am  argtypes.h  byteswap.h  constants.c  constants.h  debugflags.c  debugflags.h  dumpiio.c  dumpiio.h  funclabels.c  funclabels.h  funcs.c  funcs.h  gettime.c  gettime.h  hashmap.h  io.c  io.h  iodefs.c  iodefs.h  perfctrs.c  perfctrs.h  perfctrtags.c  perfctrtags.h  settings.h  types.c  types.h
dumpi/libdumpi/: Makefile.am  callprofile-addrset.c  callprofile-addrset.h  callprofile.c  callprofile.h  data.c  data.h  fromf77.f  fromf90.f90  fused-bindings.h  init.c  init.h  libdumpi.c  libdumpi.h  mpibindings-maps.c  mpibindings-maps.h  mpibindings-utils.c  mpibindings-utils.h  mpibindings.h  mpibindings2.c  mpibindings3.c  tof77.c  tof77.h
dumpi/libotf2dump/: Makefile.am  commcreateconstructor.cc  commsplitconstructor.cc  otf2deftable.cc  otf2writer-defs.h  otf2writer.cc  otf2writer.h  rankcontext.cc
dumpi/libundumpi/: Makefile.am  bindings.c  bindings.h  callbacks.c  callbacks.h  dumpistate.c  dumpistate.h  freedefs.h  libundumpi.c  libundumpi.h
dumpi/test/: Makefile.am  coll.c  coll.h  manip.c  manip.h  p2p.c  p2p.h  probe.h  run_testf77.sh  run_testf90.sh  run_testmpi.sh  testf77.f  testf90.f90  testmpi.c  testthreads-funneled.c  testthreads-multiple.c  testthreads-serialized.c  testthreads.c
dumpi/test/apps/: test_conversion.c
scripts/: cost.pl  delta.pl  timings.pl  timings2.pl  timings3.pl  tstamps.pl
tests/: Makefile.am
tests/traces/: callcounts-batch.txt  callcounts-single.txt  testtrace-0000.txt
xcode/dumpi/: dumpi-Info.plist
xcode/dumpi.xcodeproj/: project.pbxproj
xcode/scripts/: build  copy_headers
