#
#   This file is part of DUMPI: 
#                The MPI profiling library from the SST suite.
#   Copyright (c) 2009 Sandia Corporation.
#   This software is distributed under the BSD License.
#   Under the terms of Contract DE-AC04-94AL85000 with Sandia Corporation,
#   the U.S. Government retains certain rights in this software.
#   For more information, see the LICENSE file in the top 
#   SST/macroscale directory.
#

EXTRA_DIST = traces/callcounts-batch.txt  traces/callcounts-single.txt \
             traces/testtrace-0000.bin    traces/testtrace-0000.txt    \
             traces/testtrace-0001.bin    traces/testtrace-0002.bin    \
             traces/testtrace-0003.bin    traces/testtrace.meta
